--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <h1 class="mb-0"><font color="indianred">Jaickey </font>
             <span class="text-primary"><font color="darksalmon">JOY MINJ</font></span>
           </h1>
-          <div>S/o Maxi Minj , House number 143, Near Hanuman Mandir , Village - Nawapara (Tenda) , Tehshil - Gharghoda , District - Raigarah , Chhattisgarh ,Pincode- 496111 <br> Contact- 7530028075 <br> E-mail -
+          <div>S/o Maxi Minj , House number 143, Near Hanuman Mandir , Village - Nawapara (Tenda) , Tehshil - Gharghoda , District - Raigarh , Chhattisgarh ,Pincode- 496111 <br> Contact- 7530028075 <br> E-mail -
             <a href="mailto:name@email.com">jaickey09@gmail.com</a>
           </div><br>
           <p class="mb-5">My name is Jaickey, and I enjoy meeting new people and travelling to new places to explore the rich cultures and tradition .I’m currently looking for a internship.</p>
