--- a/ExperimentTwoPartTwo.html
+++ b/ExperimentTwoPartTwo.html
@@ -241,7 +241,7 @@ and open the template in the editor.
         <fieldset>
         <table width="100%" border="0">
             <tr>
-                <th width="35%" align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <th width="35%" align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     Attach your resume in the format of .doc or .pdf</th>
                 <th align="left"><input type="file" name="ftu"></th>
             </tr>
