--- a/ExperimentTwoPartTwo.html
+++ b/ExperimentTwoPartTwo.html
@@ -141,7 +141,8 @@ and open the template in the editor.
                 </tr>
                 <tr>
                     <th width="30%" align="left">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Website
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Website
                     </th>
                     <th  width="70%" align="left">
                         <input type="text" size="30" maxlength="30" placeholder="www.sample.com">
