--- a/ExperimentTwoPartOne.html
+++ b/ExperimentTwoPartOne.html
@@ -106,7 +106,7 @@ and open the template in the editor.
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </td>
-                    <td ><fieldset >
+                    <td ><fieldset style="width:370px; height=120px">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!
                                 1m12!1m3!1d15007.203183650792!2d86.08236546911697!
                                 3d19.890631763715962!2m3!1f0!2f0!3f0!3m2!1i1024!2i7
