--- a/ExperimentThree.html
+++ b/ExperimentThree.html
@@ -181,7 +181,7 @@ and open the template in the editor.
         <nav>
             <ul>
                 <li><a href="http://www.annatech.me/ExperimentThree.html">Home</a></li>
-                <li><a href="http://www.annatech.me/ExperimentAboutUs.html">About Us</a></li>
+                <li><a href="http://www.annatech.me/ExperimentTwoPartTwo.html">About Us</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Chemistry">Wikipedia</a></li>
                 <li><a href="https://www.youtube.com/watch?v=R1RMV5qhwyE&list=PLZrSPiD-ZQr2XGXpLloVZvLYj_2nWsnMR">Youtube Channel</a></li>
                 <li><a href='down'>Contact Us</a></li>
