--- a/ExperimentFour.html
+++ b/ExperimentFour.html
@@ -269,7 +269,7 @@ and open the template in the editor.
             height:220px;
             width:100%;
             position:absolute;
-            background-image: url('bg.jpg');
+            background-color:lightblue;
             background-repeat: no-repeat;
             background-size: cover;
             opacity:0.5;
