--- a/Removal.html
+++ b/Removal.html
@@ -5,7 +5,7 @@
         body {margin: 30px;} 
         </style>  
         <meta charset=utf-8 /> 
-        <title>Remove items from a dropdown list</title> 
+        <title>Remove Items</title> 
         </head>
         <body>
          <form> 
