--- a/SixIndex.html
+++ b/SixIndex.html
@@ -32,7 +32,7 @@ and open the template in the editor.
                 <td><a href="https://www.annatech.me/six/Object.html">Click Me</a></td>
             </tr>
             <tr>
-                <td>Student Details</td>
+                <td>Car Animation</td>
                 <td><a href="https://www.annatech.me/six/Car.html">Click Me</a></td>
             </tr>
         </table>
